[gd_scene load_steps=4 format=3 uid="uid://bk2argmujy0kk"]

[ext_resource type="Script" path="res://addons/block_code/ui/blocks/control_block/control_block.gd" id="1_2hbir"]
[ext_resource type="PackedScene" uid="uid://c7puyxpqcq6xo" path="res://addons/block_code/ui/blocks/drag_drop_area/drag_drop_area.tscn" id="2_ejaei"]
[ext_resource type="PackedScene" uid="uid://b1oge52xhjqnu" path="res://addons/block_code/ui/blocks/snap_point/snap_point.tscn" id="3_65h43"]

[node name="ControlBlock" type="MarginContainer"]
script = ExtResource("1_2hbir")
color = Color(0.564695, 0.720374, 0.858716, 1)
snap_paths = Array[NodePath]([NodePath("VBoxContainer/MiddleMarginContainer/SnapPoint")])
bottom_snap_path = NodePath("VBoxContainer/BottomMarginContainer/SnapPoint")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TopMarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="TopBar" type="ColorRect" parent="VBoxContainer/TopMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
color = Color(0.564695, 0.720374, 0.858716, 1)

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TopMarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TopMarginContainer/MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TopMarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Test Block"

[node name="DragDropArea" parent="VBoxContainer/TopMarginContainer" instance=ExtResource("2_ejaei")]
layout_mode = 2

[node name="MiddleMarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MiddleBar" type="ColorRect" parent="VBoxContainer/MiddleMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
color = Color(0.451756, 0.576299, 0.686973, 1)

[node name="SnapPoint" parent="VBoxContainer/MiddleMarginContainer" instance=ExtResource("3_65h43")]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
block_path = NodePath("../../..")

[node name="BottomMarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="BottomBar" type="ColorRect" parent="VBoxContainer/BottomMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
color = Color(0.564695, 0.720374, 0.858716, 1)

[node name="SnapPoint" parent="VBoxContainer/BottomMarginContainer" instance=ExtResource("3_65h43")]
layout_mode = 2
block_path = NodePath("../../..")

[connection signal="mouse_down" from="VBoxContainer/TopMarginContainer/DragDropArea" to="." method="_on_drag_drop_area_mouse_down"]
